# td-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/td_mcp/: __init__.py  __main__.py  config.py  server.py  td_client.py
src/td_mcp/tools/: __init__.py  connections.py  execute.py  operators.py  parameters.py
td_bridge/: webserver_callbacks.py
