[project]
name = "td-mcp"
version = "0.1.3"
description = "MCP server for controlling TouchDesigner from AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "tai5863", email = "taisws5863@gmail.com" },
]
keywords = ["touchdesigner", "mcp", "model-context-protocol", "creative-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tai5863/td-mcp"
Repository = "https://github.com/tai5863/td-mcp"

[project.scripts]
td-mcp = "td_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td_mcp"]
